--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.4.2",
     "bcrypt": "^5.1.1",
     "prisma": "^5.4.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger": "^0.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
